<resources>
    <string name="app_name">Rove</string>
    <string name="button_addVisit">Add Visit</string>
    <string name="button_addRating">Add Rating</string>
    <string name="hint_visitTitle">Visit Title</string>
    <string name="hint_visitDescription">Description </string>
    <string name="menu_addVisit">Add</string>
    <string name="menu_cancelVisit">Cancel</string>
    <string name="enter_visit_title"> Please enter a Visit Title </string>
    <string name="save_visit"> Save Visit </string>
    <string name="button_addImage"> Add Image </string>
    <string name="select_visit_image">Select image</string>
    <string name="change_visit_image">Change image</string>
    <string name="button_location">Set Location</string>
    <string name="title_activity_map">MapActivity</string>
    <string name="menu_deleteVisit">Delete</string>
    <string name="title_activity_rove_maps">Map of all visits</string>
    <string name="menu_saveVisit">Save</string>
    <string name="login">Login</string>
    <string name="password">Password</string>
    <string name="email">Email</string>
    <string name="logout">Logout</string>
</resources>
